--- a/gb/22/12/10/n13882235.md
+++ b/gb/22/12/10/n13882235.md
@@ -1,64 +1,55 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>基隆终身学习博览会 “艺起同乐”成焦点</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/12/id13882236-589657-600x400.jpg" />
 <h6>基隆市第16届终身学习博览会（基隆市政府提供）
 </h6>
 <hr>
-<p>【大纪元2022年12月10日讯】（大纪元记者陈秀媛台湾<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9F%BA%E9%9A%86.md#1">基隆</a>报导）基隆市第16届<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BB%88%E8%BA%AB%E5%AD%A6%E4%B9%A0.md#1">终身学习</a>博览会暨111年学习型城市成果展”于111年12月10日(六)下午在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9F%BA%E9%9A%86.md#1">基隆</a>市国门广场！本年度邀请社区大学、部落大学、七区乐龄学习中心、崇右影艺科技大学等终身学习机构和学习型城市团队共同呈现丰硕的学习成果。</p>
-<p>基隆市<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BB%88%E8%BA%AB%E5%AD%A6%E4%B9%A0.md#1">终身学习</a>博览会已迈入第16个年头，于终身学习领域持续耕耘不遗余力，各单位都有自己独特的课程，中山海洋创客乐活学习、信义木创及植栽、仁爱乐龄木工饰品、暖暖乐龄蓝染艺坊等，老人也有很精致的手艺和品味，体现终身学习精神。</p>
+<p>【大纪元2022年12月10日讯】（大纪元记者陈秀媛台湾基隆报导）基隆市第16届终身学习博览会暨111年学习型城市成果展”于111年12月10日(六)下午在基隆市国门广场！本年度邀请社区大学、部落大学、七区乐龄学习中心、崇右影艺科技大学等终身学习机构和学习型城市团队共同呈现丰硕的学习成果。</p>
+<p>基隆市终身学习博览会已迈入第16个年头，于终身学习领域持续耕耘不遗余力，各单位都有自己独特的课程，中山海洋创客乐活学习、信义木创及植栽、仁爱乐龄木工饰品、暖暖乐龄蓝染艺坊等，老人也有很精致的手艺和品味，体现终身学习精神。</p>
 <p>本次开场表演由崇右影艺科技大学一群活泼的大学生揭开序幕，同时也为大家带来一段青春活力的舞蹈表演。动态表演节目表演者年龄横跨老、中、青三代，表演内容丰富包含口琴、月琴及陶笛等乐器演出，另融合各种舞蹈及柔力球等表演，表演者无不使出浑身解数尽情展现学习成果，让现场民众感受满满活力！</p>
 <p>其中新住民学习中心学员穿着越南传统服装，风姿绰约，伴随音乐跳出曼妙的“越南风情”，令人印象深刻。本次更邀请民视凤凰两位艺人担任佳宾演出，盼能串起各丰富的展示内涵，投射出本次活动社区化、异质化、年龄无距离的智慧魅力。</p>
 <p>会中也进行“祖孙同游玩基隆摄影比赛”颁奖，疫情解封后，您有多久没有跟阿公阿嬷一同出游?故邀请民众在基隆各处合影留念，留下美好的记忆时刻，加温祖孙情谊。本次比赛金奖获奖者为林鸿铭，捕捉了祖孙同游和平岛公园,于黄色的装置艺术前大声说爱的意念，用“影像”纪录与祖母间的交流点滴，感受祖孙共处的温馨。</p>
 <p>基隆市“全国学习型城市竞争型计划”已迈入第八年，学习型城市是国际社会主流价值，而终身学习更是城市竞争力及现代社会的一种生活方式。《咱的声音》怪奇舞台剧也在博览会中带来今年最后一波活动，由欲望剧团编导品文带着剧中演员，与市民朋友们面对面探索剧中的角色，5位专属基隆的神秘怪奇（林开郡洋楼、委托行露露、通勤、旭川河、吉古拉），一起观察生活大小事，发掘周遭的议题，体验创造怪奇的乐趣。</p>
 <p>最后，当天活动也特别进行致赠感谢状予庆安宫及佳美餐饮设备有限公司，赞助本市弱势学生家庭及学校艺术才能班观赏《音乐舞台剧-阿嬷的歌本2.0》。另给予本市乐龄及社大颁发“111年度乐龄学习中心辅导访视荣获绩优评鉴”、“110年度基隆市办理社区大学评鉴业务-特优”以及“祖孙摄影玩乐基隆摄影比赛”活动颁奖，欢迎所有市民朋友一起投入终身学习的行列，让人生更加丰富，再给自己一次机会，让您享受不同领域的生活乐趣！</p>
 <p>责任编辑：玉珍</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/12/11/n13431170.md#1">基市终身学习博览会 老青少party成焦点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/4/7/n13701350.md#1">国立空中大学加拿大校友会4月成立 凝聚校友 终身学习</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/8/n13880707.md#1">基隆校舍清洗、止滑、防泼雨 焕然一新！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/8/n13880754.md#1">社区规划师成果展 25团队共创微笑基隆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/9/n13881683.md#1">提前欢度圣诞节 基隆扶轮社化身圣诞老公公</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981383.md#1">提供友善消费环境 市府稽查和平岛观光渔市</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981279.md#1">听见爱的声音 元健天籁列车捐赠千台助听器</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981272.md#1">基隆捷运公听会26日于七堵举办</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981271.md#1">中央撤销护海公投 环团：没有环境正义可言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981224.md#1">防止个资被窃 基隆关吁请业者强化个资保护</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/12/11/n13431170.md#1">基市终身学习博览会 老青少party成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/7/n13701350.md#1">国立空中大学加拿大校友会4月成立 凝聚校友 终身学习</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/8/n13880707.md#1">基隆校舍清洗、止滑、防泼雨 焕然一新！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/8/n13880754.md#1">社区规划师成果展 25团队共创微笑基隆</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/9/n13881683.md#1">提前欢度圣诞节 基隆扶轮社化身圣诞老公公</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308082.md#1">针对罢免谢国梁案 蓝营轰民进党造谣查询单数</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308067.md#1">尊重罢梁行动 绿营：监督预算合情合理</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308017.md#1">五堵捷运及基隆科技园区用地预计以重划取得　</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307278.md#1">东岸广场争议基市府再胜诉 NET假处分遭驳回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307257.md#1">基隆港务公司捐赠物资降低因贫穷发生的犯罪</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/22/n10414742.md#1" target="_blank">共产暴政录：文革抄家抢了多少财宝</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/12/28/n4328405.md#1" target="_blank">云帆：从台北市长保护法轮功学员谈起</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/14/n11256527.md#1" target="_blank">【征文】凌晓辉：贞洁论（二）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/25/n10932219.md#1" target="_blank">褒奖法轮功 推崇普世价值</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976615.md#1">【未解之谜】这条河干涸了 末日就会到来？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973650.md#1">关公托梦的神迹 改写命运的对联</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/13/n13971971.md#1">联耳三兔 跨越时空的传奇图腾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969693.md#1">【古道人生】贞女凭一首诗识破假新郎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/6/n13966143.md#1">【历史的瞬间】官媒口径中4?25“围攻”中南海的真相</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/24/n13980904.md#1">【秦鹏观察】欧盟将改对华战略 美推90天冲刺</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/22/n13979276.md#1">【时事人物】台湾2024看板：“仁医治国”赖清德</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/24/n13980577.md#1">【远见快评】一言得罪14国 卢沙野泄习秘密？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/23/n13979381.md#1">沈舟：中共海军节糗事 航母启动需48小时</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/23/n13979340.md#1">大陆网络热传第二波染疫潮 张文宏给建议遭质疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/23/n13979334.md#1">四川失业女生摆摊 全天只卖5块 崩溃痛哭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/23/n13979861.md#1">曾拒上亿酬劳担任音乐节目导师？张学友回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/23/n13979914.md#1">范冰冰现身香港拍广告 状态获网民夸赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/22/n13979124.md#1">《绝地营救》影评：救援行动 让报恩美德大放异彩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/23/n13979831.md#1">周星驰晒合照 宣布与五月天合组六月天出单曲</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13974638.md#1">长白发是这些原因造成！6要点1秘诀让白发变黑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/22/n13979171.md#1">世界各地30名百岁人瑞分享长寿秘诀（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13960579.md#1">名中医的补脑养颜汤 让你的大脑更年轻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/12/n13970820.md#1">著名音乐人因它病逝 4类人高危 1种维生素可预防</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/24/n13980207.md#1">前所未有 美国房地产6大异象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307329.md#1">【百年真相】从资本家到右派 李康年真话代价</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308353.md#1">【马克时空】乌军以牙还牙 越境攻击俄库尔斯克</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307706.md#1">《死侍与金钢狼》票房破9亿 周末有望达10亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296647.md#1">知名医院主治医师：五种癌症可早期预防</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306483.md#1">为何天气炎热时比较不会感觉饿？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307219.md#1">如何去除衣服上的防晒乳污渍？ 这一物有奇效</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/10/n13882235.htm">基隆终身学习博览会 “艺起同乐”成焦点</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/12/10/n13882235.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/10/n13882235.htm">基隆终身学习博览会 “艺起同乐”成焦点</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/12/10/n13882235.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
